# MDSC-workshop

./: .dockerignore  .gitignore  Dockerfile  PRD.md  README.md  design-case-presentation.md  design-prefill-first-message.md  design.md  render.yaml  scenario.MD
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/rules/: frontend-standards.md  python-standards.md
.claude/skills/backend-api-docs/: SKILL.md
.claude/skills/create-git-commit/: SKILL.md
.claude/skills/frontend/: SKILL.md
.claude/skills/tdd/: SKILL.md
backend/: .env.example  pyproject.toml
backend/app/: admin.py  anchors.py  assignment.py  chat.py  config.py  db.py  deps.py  main.py  models.py  schemas.py  seed.py
backend/tests/: conftest.py  test_assignment.py  test_flow.py  test_runs.py  test_seed.py
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
